// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeriesEnds should render after postfix 1`] = `
<div
  className="tribe-editor__events-pro__row tribe-editor__labeled-row tribe-editor__series-ends"
>
  <div
    className="tribe-editor__events-pro__label tribe-editor__labeled-row__label"
  >
    <span
      className="tribe-editor__events-pro__label-text"
    >
      Series ends
    </span>
  </div>
  <div
    className="tribe-editor__labeled-row__content"
  >
    <div
      className="css-10nd86i tribe-editor__select tribe-editor__series-ends__select"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z tribe-editor__select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 tribe-editor__select__value-container tribe-editor__select__value-container--has-value"
        >
          <div
            className="css-xp4uvy tribe-editor__select__single-value"
          >
            After
          </div>
          <input
            className="css-14uuagi"
            id="react-select-4-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            tabIndex="0"
            value=""
          />
        </div>
        <div
          className="css-1wy0on6 tribe-editor__select__indicators"
        >
          <div
            aria-hidden="true"
            className="css-1ep9fjw tribe-editor__select__indicator tribe-editor__select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <span
              className="tribe-editor__select__dropdown-indicator"
            >
              arrow-down
            </span>
          </div>
        </div>
      </div>
    </div>
    <input
      className="tribe-editor__input tribe-editor__input--number tribe-editor__series-ends__number-input"
      min={1}
      onChange={[MockFunction]}
      type="number"
      value={1}
    />
    <span>
      event
    </span>
  </div>
</div>
`;

exports[`SeriesEnds should render component 1`] = `
<div
  className="tribe-editor__events-pro__row tribe-editor__labeled-row tribe-editor__series-ends test-class"
>
  <div
    className="tribe-editor__events-pro__label tribe-editor__labeled-row__label"
  >
    <span
      className="tribe-editor__events-pro__label-text"
    >
      Series ends
    </span>
  </div>
  <div
    className="tribe-editor__labeled-row__content"
  >
    <div
      className="css-10nd86i tribe-editor__select tribe-editor__series-ends__select"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z tribe-editor__select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 tribe-editor__select__value-container tribe-editor__select__value-container--has-value"
        >
          <div
            className="css-xp4uvy tribe-editor__select__single-value"
          >
            On
          </div>
          <input
            className="css-14uuagi"
            id="react-select-2-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            tabIndex="0"
            value=""
          />
        </div>
        <div
          className="css-1wy0on6 tribe-editor__select__indicators"
        >
          <div
            aria-hidden="true"
            className="css-1ep9fjw tribe-editor__select__indicator tribe-editor__select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <span
              className="tribe-editor__select__dropdown-indicator"
            >
              arrow-down
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="tribe-editor__day-picker-input DayPickerInput"
    >
      <input
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="YYYY-M-D"
        value="September 7, 2019"
      />
    </div>
  </div>
</div>
`;

exports[`SeriesEnds should render no postfix 1`] = `
<div
  className="tribe-editor__events-pro__row tribe-editor__labeled-row tribe-editor__series-ends"
>
  <div
    className="tribe-editor__events-pro__label tribe-editor__labeled-row__label"
  >
    <span
      className="tribe-editor__events-pro__label-text"
    >
      Series ends
    </span>
  </div>
  <div
    className="tribe-editor__labeled-row__content"
  >
    <div
      className="css-10nd86i tribe-editor__select tribe-editor__series-ends__select"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z tribe-editor__select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 tribe-editor__select__value-container tribe-editor__select__value-container--has-value"
        >
          <div
            className="css-xp4uvy tribe-editor__select__single-value"
          >
            Never
          </div>
          <input
            className="css-14uuagi"
            id="react-select-5-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            tabIndex="0"
            value=""
          />
        </div>
        <div
          className="css-1wy0on6 tribe-editor__select__indicators"
        >
          <div
            aria-hidden="true"
            className="css-1ep9fjw tribe-editor__select__indicator tribe-editor__select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <span
              className="tribe-editor__select__dropdown-indicator"
            >
              arrow-down
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SeriesEnds should render on postfix 1`] = `
<div
  className="tribe-editor__events-pro__row tribe-editor__labeled-row tribe-editor__series-ends"
>
  <div
    className="tribe-editor__events-pro__label tribe-editor__labeled-row__label"
  >
    <span
      className="tribe-editor__events-pro__label-text"
    >
      Series ends
    </span>
  </div>
  <div
    className="tribe-editor__labeled-row__content"
  >
    <div
      className="css-10nd86i tribe-editor__select tribe-editor__series-ends__select"
      onKeyDown={[Function]}
    >
      <div
        className="css-vj8t7z tribe-editor__select__control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1hwfws3 tribe-editor__select__value-container tribe-editor__select__value-container--has-value"
        >
          <div
            className="css-xp4uvy tribe-editor__select__single-value"
          >
            On
          </div>
          <input
            className="css-14uuagi"
            id="react-select-3-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            tabIndex="0"
            value=""
          />
        </div>
        <div
          className="css-1wy0on6 tribe-editor__select__indicators"
        >
          <div
            aria-hidden="true"
            className="css-1ep9fjw tribe-editor__select__indicator tribe-editor__select__dropdown-indicator"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <span
              className="tribe-editor__select__dropdown-indicator"
            >
              arrow-down
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="tribe-editor__day-picker-input DayPickerInput"
    >
      <input
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="YYYY-M-D"
        value="September 7, 2019"
      />
    </div>
  </div>
</div>
`;
